--- a/src/NosCore.Injector/NosCore.Injector.csproj
+++ b/src/NosCore.Injector/NosCore.Injector.csproj
@@ -1,23 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>netcoreapp3.0</TargetFramework>
+		<TieredCompilation>true</TieredCompilation>
 		<LangVersion>latest</LangVersion>
-		<ApplicationIcon>favicon.ico</ApplicationIcon>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Authors>NosCore</Authors>
-		<Copyright>2020</Copyright>
 		<Nullable>enable</Nullable>
-		<RepositoryUrl>https://github.com/NosCoreIO/NosCore.Injector.git</RepositoryUrl>
-		<PackageIconUrl></PackageIconUrl>
-		<PackageTags>nostale, noscore, chickenapi, nostale private server source, nostale emulator</PackageTags>
-		<Version>1.1.0</Version>
-		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-		<Description>NosCore's Injector</Description>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<RepositoryType>git</RepositoryType>
-		<Company>NosCore</Company>
-		<PackageIcon>icon.png</PackageIcon>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 	</PropertyGroup>
 
@@ -25,15 +12,44 @@
 		<OutputPath>..\..\build\</OutputPath>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<OutputPath>..\..\build\</OutputPath>
+	</PropertyGroup>
+
 	<ItemGroup>
-		<PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\..\icon.png">
-			<Pack>True</Pack>
-			<PackagePath></PackagePath>
+		<PackageReference Include="Bleak" Version="3.1.1" />
+		<PackageReference Include="NosCore.Shared" Version="1.9.2" />
+		<PackageReference Include="Serilog" Version="2.10.0" />
+		<PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+		<None Update="Configuration\logger.yml">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="Configuration\injector.yml">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Update="Resource\LocalizedResources.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>LocalizedResources.resx</DependentUpon>
+		</Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+		<EmbeddedResource Update="Resource\LocalizedResources.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+			<LastGenOutput>LocalizedResources.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
 	</ItemGroup>
 
 </Project>
